Adds support commands